# GTAV-Classes-1

./: CMakeLists.txt  classes.cpp
base/: atFixedBitSetBase.hpp  rlTaskBase.hpp
enums/: ConnectReason.hpp  Format.hpp  FormatFlags.hpp  ImageType.hpp  LoadingScreenContext.hpp  LoadingScreenMovieContext.hpp  ShaderType.hpp  diagChannelPosix.hpp  diagSeverity.hpp  eExplosionTag.hpp  eHandlingType.hpp  grcLockType.hpp  grcMrt.hpp  netHttpAbortReason.hpp  netHttpVerb.hpp  netTcpResult.hpp  rlRos.hpp  rlRosAccount.hpp  rlRosEnvironment.hpp  rlRosHttpEncryption.hpp  rlRosPrivilegeId.hpp  rlRosSecurityFlags.hpp  scrProgramId.hpp  scrThreadId.hpp
game_files/: CGameConfig.hpp  GameDataHash.hpp
graphics/: Color32.hpp  fwAssetDef.hpp  fwGenericAssetDef.hpp  fwTxdDef.hpp  grcCBuffer.hpp  grcCellGcmTextureWrapper.hpp  grcComputeProgram.hpp  grcDevice.hpp  grcDomainProgram.hpp  grcEffect.hpp  grcFragmentProgram.hpp  grcGeometryProgram.hpp  grcHullProgram.hpp  grcImage.hpp  grcInstanceData.hpp  grcParameter.hpp  grcParameterAnnotation.hpp  grcProgram.hpp  grcResolveFlags.hpp  grcTexture.hpp  grcTextureLock.hpp  grcVertexProgram.hpp
netsync/: parTree.hpp  parTreeNode.hpp
network/: CMsgJoinRequest.hpp  CNetworkSCNewsStoryRequest.hpp  Rc4Context.hpp  Sha1.hpp  WOLFSSL_CTX.hpp  diagChannel.hpp  netHttpRequest.hpp  netHttpRequestFilter.hpp  netIpAddress.hpp  netIpV4Address.hpp  netSocketAddress.hpp  netStatus.hpp  netTcpAsyncOp.hpp  netTimeout.hpp  rlHttpTask.hpp  rlRosContentSignature.hpp  rlRosCredentials.hpp  rlRosHttpFilter.hpp  rlRosHttpTask.hpp  rlRosHttpUserAgentHeader.hpp  (+3 more)
(+79 files in other folders)
